@@ -115,6 +115,7 @@ Misc.
 		     [ ]  Draw meaningful graphics.
 		     [ ]  Draw text labels for Components.
 		[ ]  Palette on the right-hand side of available components.
+			[ ]  Keep size when main window is resized!
 
 	[ ]  Main run loop: Verify that both cycle accurate and larger chunks
 	     works well. Unit test?
@@ -359,6 +360,9 @@ GTKMM GUI
 
 	[ ]  Make the Play (and Pause?) buttons stay down, if the RunState
 	     is in specific states.
+
+	[ ]  Open and Save should have Open/Save as the default button, so that
+		pressing Enter works!
 
 	[/]  Menu bar:
 		File
