@@ -33,8 +33,8 @@ Available template machines:
  <td valign=top>Experimental MIPS machine.<pre>  (unnamed machine)  [testmips]
   \-- mainbus0
       |-- ram0  (32 MB at offset 0)
-      |-- rom0  (32 MB at offset 0x1fc00000)
-      \-- mips_cpu0  (100 MHz)
+      |-- rom0  (16 MB at offset 0x1fc00000)
+      \-- cpu0  (MIPS, 100 MHz)
 </pre></td>
  <td valign=top></td>
 </tr>
